@@ -14,6 +14,11 @@
 	* term/win.trm (WIN_filled_polygon): Filled polygon are always closed.
 	Ignore the last corner if it's the same as the first one.
 
+	src/plot.c (gnu_main) src/win/winmain.c (main): The Windows version
+	used to handle the persist command line option in winmain.c. Moving
+	it to plot.c ensures that the same options are supported on all
+	platforms. See Bug #3538762
+
 2012-10-05  Dima Kogan  <dima@secretsauce.net>
 
 	* lisp/gnuplot.el: With this patch, emacs mode no longer pollutes
